# POS_semestralka

./: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/Canvas/: canvas.c  canvas.h
src/Communication/: client.c  client.h  server.c  server.h
src/Menu/: menu.c  menu.h
src/Simulation/: simulation.c  simulation.h
